--- a/package.json
+++ b/package.json
@@ -48,7 +48,11 @@
     "less-loader": "^4.0.5",
     "lint-staged": "^6.0.0",
     "mockjs": "^1.0.1-beta3",
-    "vue-template-compiler": "^2.5.13"
+    "vue-template-compiler": "^2.5.13",
+    "webpack-dev-server": ">=3.1.11",
+    "devDependencies": {
+      "cryptiles": ">=4.1.2"
+    }
   },
   "browserslist": [
     "> 1%",
